--- a/deploy/README
+++ b/deploy/README
@@ -26,3 +26,12 @@
  
 
 *** Notes for Linux
+
+        Compiler:gcc v.6 or later
+        Qt version 5.12 or later
+        
+        build:
+        - execute CRITERIA1D_build_Linux.sh
+        
+        
+    
