--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@ Authors:
 Fausto Tomei, Gabriele Antolini, Laura Costantini, Antonio Volta
 
 Contributions:
-Vittorio Marletto, Margot Van Soetendaal, Marco Bittelli, Alberto Pistocchi, Giulia Villani
+Vittorio Marletto, Franco Zinoni, Margot Van Soetendaal, Marco Bittelli, Alberto Pistocchi, Giulia Villani
 
 CRITERIA1D has been developed under contract issued by 
 ARPAE Hydro Meteo Climate Service, Emilia-Romagna, Italy    
@@ -14,4 +14,4 @@ Contacts:
 Fausto Tomei 
 <ftomei@arpae.it>  
 Gabriele Antolini  
-<ftomei@arpae.it>
+<gantolini@arpae.it>
